Fix calendar entity name tooltip being cut off

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -582,6 +582,7 @@ div.mce-fullscreen {
   }
 
   .entity-name {
+    max-height: none;
     font-size: 16pt;
     display: block;
   }
